@@ -28,7 +28,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "../autoconfig.h"
 #endif
 
-#ifndef WIN32
+//#ifndef WIN32
 
 #include <vector>
 #include "SDL_mapping.h"
@@ -76,7 +76,8 @@ private:
 
 };
 
-#else
+//#else
+#if 0
 
 class Audio {
 public:
