@@ -21,7 +21,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #ifndef _Configuration_h_
 #define _Configuration_h_
 
-#if __GNUG__ >= 2
+#if (__GNUG__ >= 2) && (!defined WIN32)
 #  pragma interface
 #endif
 
