@@ -17,7 +17,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 
 
-#if __GNUG__ >= 2
+#if (__GNUG__ >= 2) && (!defined WIN32)
 #  pragma implementation
 #endif
 
